--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
 - '6'
+cache:
+  directories:
+    - node_modules
 before_install:
 - openssl aes-256-cbc -K $encrypted_b0dab8baefe0_key -iv $encrypted_b0dab8baefe0_iv
   -in client-secret.json.enc -out client-secret.json -d
