--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ cache:
 before_install:
 - openssl aes-256-cbc -K $encrypted_b0dab8baefe0_key -iv $encrypted_b0dab8baefe0_iv
   -in client-secret.json.enc -out client-secret.json -d
+before_deploy:
+  - node gen.js
 deploy:
   provider: gae
   keyfile: client-secret.json
