--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ deploy:
   skip_cleanup: true
   keyfile: client-secret.json
   project: web-components-resources
+  config: app.yaml
   default: true
