--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ cache:
   directories:
     - node_modules
 before_deploy:
-  - openssl aes-256-cbc -K $encrypted_b0dab8baefe0_key -iv $encrypted_b0dab8baefe0_iv
-  -in client-secret.json.enc -out client-secret.json -d
+  - openssl aes-256-cbc -K $encrypted_b0dab8baefe0_key -iv $encrypted_b0dab8baefe0_iv -in client-secret.json.enc -out client-secret.json -d
   - node gen.js
 deploy:
   provider: gae
