--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
   directories:
   - node_modules
 before_install:
--  'if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then bash openssl aes-256-cbc -K $encrypted_5ae6bda58156_key -iv $encrypted_5ae6bda58156_iv
+-  'if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then openssl aes-256-cbc -K $encrypted_5ae6bda58156_key -iv $encrypted_5ae6bda58156_iv
   -in client-secret.json.enc -out client-secret.json -d; fi'
 script:
 - node gen.js
