--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "private": true,
   "engines": {
-    "node": "~4.2"
+    "node": "8.x"
   },
   "scripts": {
     "start": "node app.js",
